--- a/index.html
+++ b/index.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/DongHoBamGio.js"></script>
     <link rel="stylesheet" href="css/DongHoBamGio.Css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto&display=swap"
+        rel="stylesheet">
     <title>Đồng hồ bấm giờ</title>
 </head>
+
 <body>
     <div class="container">
         <h2>Đồng hồ bấm giờ</h2>
-        <p><span id="seconds">00</span><span>:</span><span id="tens">00</span></p>
+        <p>
+            <span id="seconds">00</span>
+            <span>:</span>
+            <span id="tens">00</span>
+        </p>
         <div class="button " id="button_start">Start</div>
         <div class="button " id="button_stop">Stop</div>
         <div class="button " id="button_reset">Reset</div>
     </div>
-    
+
 </body>
+
 </html>
